# python-project-52

./: Makefile  README.md  pyproject.toml  render.yaml
locale/en/LC_MESSAGES/: django.po
locale/ru/LC_MESSAGES/: django.mo  django.po
task_manager/: helpers.py  mixins.py  settings.py  tests.py  urls.py  views.py
task_manager/fixtures/: label.json  status.json  task.json
task_manager/labels/: forms.py  views.py
task_manager/labels/migrations/: 0001_initial.py
task_manager/labels/tests/: test_forms.py  test_models.py  test_post.py  test_view.py  testcase.py
task_manager/statuses/: views.py
task_manager/statuses/migrations/: 0001_initial.py
task_manager/statuses/tests/: test_forms.py  test_models.py  test_post.py  test_view.py  testcase.py
task_manager/tasks/: models.py
task_manager/tasks/migrations/: 0001_initial.py  0002_initial.py
task_manager/tasks/tests/: test_forms.py  test_models.py  test_post.py  test_view.py  testcase.py
task_manager/templates/: footer.html  index.html
task_manager/users/: models.py  views.py
task_manager/users/migrations/: 0001_initial.py  0002_alter_user_first_name_alter_user_last_name.py
task_manager/users/tests/: test_forms.py  test_models.py  test_post.py  test_view.py  testcase.py
