[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Ekaterina Konstantinova <feldsher2812@gmail.com>"]
readme = "README.md"
packages = [{include = "task_manager"}]

[tool.poetry.dependencies]
python = "^3.9"
psycopg2-binary = "^2.9.9"
gunicorn = "^21.2.0"
django-bootstrap5 = "^23.3"
python-gettext = "^5.0"
python-dotenv = "^1.0.0"
dj-database-url = "2.1.0"
django-bootstrap4 = "^23.2"
django-extensions = "^3.2.3"
django-filter = "^23.3"
rollbar = "^0.16.3"
django = "^4.2.7"


[tool.poetry.group.dev.dependencies]
dj-database-url = "^2.1.0"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
